--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-quiz",
+  "name": "quiz-app",
   "version": "0.1.0",
-  "homepage": "https://llenoid.github.io/react-gh-pages",
+  "homepage": "https://llenoid.github.io/quiz-app",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
